--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
             line-height: 1.6;
             color: #333;
         }
-        h1 { color: #007AFF; }
+        h1 { color: #000000; }
         h2 { color: #555; margin-top: 30px; }
         ul { margin: 10px 0; }
         li { margin: 5px 0; }
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>Privacy Policy for SwipeCzech</h1>
-    <p><em>Last updated: November 21, 2024</em></p>
+    <p><em>Last updated: November 21, 2025</em></p>
     
     <h2>Introduction</h2>
     <p>SwipeCzech ("we," "our," or "us") respects your privacy. This Privacy Policy explains how we collect, use, and protect your information when you use our mobile application.</p>
@@ -155,7 +155,7 @@
     
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     <p style="text-align: center; color: #999; font-size: 14px;">
-        © 2024 SwipeCzech. All rights reserved.
+        © 2025 SwipeCzech. All rights reserved.
     </p>
 </body>
 </html>
