--- a/terms.html
+++ b/terms.html
@@ -211,7 +211,7 @@
     <p>Your use of SwipeCzech is also governed by our <a href="privacy.html">Privacy Policy</a>, which is incorporated into these Terms by reference. Please review our Privacy Policy to understand our data practices.</p>
     
     <h2>16. Changes to These Terms</h2>
-    <p>We may update these Terms of Service from time to time. We will notify you of significant changes by:</p>
+    <p>We may update these Terms ofi Service from time to time. We will notify you of significant changes by:</p>
     <ul>
         <li>Updating the "Last updated" date at the top</li>
         <li>Displaying a notice in the App</li>
@@ -243,7 +243,7 @@
     
     <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
     <p style="text-align: center; color: #999; font-size: 14px;">
-        © 2024 SwipeCzech. All rights reserved.
+        © 2025 SwipeCzech. All rights reserved.
     </p>
 </body>
 </html>
